Moved the color stuff to it's own project resolves #3